--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Saber ali",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "joi": "^17.13.1",
