--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URI=mongodb://127.0.0.1/bookStoreDB
 PORT='8000'
 NODE_ENV=development
 JWT_SECRET_KEY=secretKey123456789
+
+# USER_EMAIL=add gmail to send email
+# USER_PASS=add password from gmail
